# perf-lab-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  PROJECT_AGENT_BRIEF.md  README.md  alembic.ini  docker-compose.yml  main.py  netlify.toml  openapi.json  package-lock.json  pyproject.toml  railway.toml  requirements.txt  tsconfig.node.json
.claude/: settings.local.json
.claude/agents/: coder.md  critic.md  orchestrator.md  planner.md  researcher.md
.claude/commands/: ship.md
.github/workflows/: ci.yml
.superpowers/sdd/: task-7-report.md
agent_collab/context/: agent_rules.md  coder_onboarding.md  critic_onboarding.md  environment.md  planner_onboarding.md  project_goal.md  researcher_onboarding.md  restart_instructions.md
agent_collab/logs/: decisions.md
agent_collab/state/: task_state.json
alembic/: env.py
alembic/versions/: a000_init_foundational_tables.py  a001_benchmark_kpi_tables.py  a002_planned_session_benchmark_cols.py  a003_session_original_scheduled_date.py  a004_wellness.py  a005_telemetry.py  a006_experiment.py  a007_athlete_display_name.py  a008_profile_primary_goal.py  a009_block_session_prefs.py  a010_objectives.py  a011_macrocycles.py  a012_recovery_shadow_log.py  a013_ekf_shadow_log.py  a014_mpc_shadow_log.py  a015_personalization_shadow_log.py  a016_benchmark_mapping_coverage.py  a017_grip_benchmark_mapping.py  a018_wearable_connections.py  a019_workout_set_logs.py  a020_benchmark_def_view_metadata.py  a021_planning_overrides.py  a022_athlete_onboarding_state.py  a023_add_wellness_stress.py  a024_exercise_e1rm_code.py  a025_strength_evidence_authority.py  a026_dose_routing_shadow_log.py  a027_normalize_domain_codes.py  a028_obs_provenance_authority.py  a029_capacity_floor_shadow_log.py  a030_seed_provenance_snapshot.py  a031_profile_date_of_birth.py  a032_strength_decline_candidates.py  a033_observation_applied_effect.py  a034_strength_decline_shadow.py  a035_tighten_profile_user_nullability.py  a036_athlete_states_notnull.py  a037_ekf_wellness_idempotency.py  a038_ekf_head_correction_replay.py
app/: main.py
app/core/: auth.py  config.py  crypto.py  db.py  errors.py
app/data/: __init__.py  exercise_bulk.py  program_templates.json  training_primitives.json
app/domain/: __init__.py  vectors.py
app/engine/: __init__.py  config.py  engine_state_codec.py  feature_flags.py  parameter_overrides.py  parameters.py  phi_table.py  simulate.py  state_bridge.py  state_loading.py
app/integrations/: __init__.py  base.py  oura.py
app/logic/: benchmark_validity.py  candidate_library.py  coaching_template_registry.py  confidence_presentation.py  cross_talk.py  decrement_prediction.py  deload_need.py  derived_metric_formulas.py  domain_vocab.py  dose_engine.py  dose_engine_v0.py  dose_routing.py  dose_routing_calibration.py  e1rm.py  goal_load_definitions.py  goal_seed_emphasis.py  interference.py  observation_authority.py  onboarding_state.py  planning.py  prescriber.py  prescription_finalize.py  recovery_telemetry.py  registries.py  seed_snapshot.py  seed_variance.py  session_draft_builder.py  state_dynamics.py  state_update.py  state_update_v0.py  strength_calibration.py  strength_decline_policy.py  strength_evidence.py  tissue_risk.py  validate_session.py  wellness_registry.py  wellness_shadow_snapshot.py  wellness_signals.py  wellness_tracking.py  workout_history.py
app/models/: __init__.py  athlete_state.py  athlete_state.v0_20260414_103123.bak  benchmark_definition.py  benchmark_observation.py  capacity_floor_shadow.py  derived_metric_definition.py  derived_metric_snapshot.py  dose_routing_shadow.py  ekf_shadow.py  exercise.py  experiment.py  macrocycle.py  mesocycle.py  mpc_shadow.py  objective.py  observation_mapping.py  personalization_shadow.py  planning_override.py  recovery_shadow.py  strength_decline_candidate.py  strength_decline_shadow.py  telemetry.py  user.py  weak_point.py  wearable_connection.py  wellness.py  workout_log.py  workout_set_log.py
app/repositories/: athlete_context_repository.py  athlete_profile_repository.py  user_repository.py  weak_point_repository.py
app/schemas/: assessment.py  dashboard.py  (+20 more)
docs/: API_GUIDE.md  ARCHITECTURE.md  COMPONENT_GUIDE.md  CONTRIBUTING.md  DECISIONS.md  DEPLOY.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  Data_Model.md  LLM_GATEWAY.md  PRESCRIBER_LOGIC.md  QUICKSTART_FLOW.md  REDESIGN_ROADMAP.md  ROADMAP.md  SYNC_WITH_BACKEND.md  System_Architecture.md  TESTING_STRATEGY.md
scripts/: deploy.ps1  deploy.sh  export_validation_datasets.py
src/: App.tsx  trainingGoals.ts  types.gen.ts  types.ts
tests/: conftest.py  psd_helpers.py  test_a036_athlete_states_nullability_migration.py  test_alembic_head_check.py  test_all_tests_assert_something.py  test_app_boots_without_pandas.py  test_assessment_surface.py  test_athlete_context_repo_history.py  test_athlete_context_repository.py  test_athlete_state_seam.py  test_audit_engine_state_classify.py  test_auth_error_disclosure.py  test_auth_routes.py  test_auth_token_decode.py  test_baseline_seeding.py  test_benchmark_fk_ownership.py  test_benchmark_loop.py  test_benchmark_mapping_coverage.py  test_benchmark_residual.py  test_benchmark_state.py  test_benchmark_validity.py  test_best_validated_strength.py  test_block_macrocycle_selection.py  test_candidate_library_scoring.py  test_candidate_scoring_guardrails.py  test_capacity_ceiling_single_source.py  test_capacity_confidence.py  test_capacity_confidence_decay.py  test_capacity_corruption_hotfix.py  test_capacity_floor_shadow.py  test_coaching_templates.py  test_committed_override_artifacts.py  test_config_settings_are_wired.py  test_constraint_engine.py  test_cors_prod_origin.py  test_current_state_loader.py  test_dashboard_overview.py  test_dashboard_overview_routes.py  test_dashboard_routes.py  test_decision_telemetry_routes.py  (+157 more)
web/: .env.example  .gitattributes  AGENTS.md  Dockerfile  README.md  netlify.toml  nginx.conf  package.json  pnpm-lock.yaml  postcss.config.cjs  railway.toml  tsconfig.json  vite.config.ts  vitest.config.ts
(+371 files in other folders)
