[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-lab-api"
version = "0.3.0"
description = "Performance Lab API — athlete state modeling and algorithmic training prescription engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Nalakram" }]

dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Config & validation
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",

    # Auth
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "bcrypt>=4.0.0",

    # HTTP / JSON
    "httpx>=0.27.0",
    "orjson>=3.10.0",

    # Math engine (v0.3 refined model)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "psycopg2-binary>=2.9.0",   # needed for alembic in some environments
]

# Future / optional feature groups (not installed by default)
llm = [
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-generativeai>=0.7.0",
    "mistralai>=0.4.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.4.0",
]

tasks = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "slowapi>=0.1.0",
]

observability = [
    "structlog>=24.4.0",
]

[project.scripts]
# Add CLI entrypoints here when ready (e.g. perflab-migrate, etc.)

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "TID"]
ignore = [
    "E501",   # line length handled by the formatter
    "UP042",  # keep `(str, Enum)` mixins — StrEnum changes str()/SAEnum semantics for enums serialized to the API + DB
]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"app.logic.dose_engine".msg = "Use app.logic.dose_engine_v0 instead — dose_engine is deprecated"

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection helpers are idiomatic as argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exported names

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "requires_db: marks tests as requiring a live PostgreSQL instance",
]
