[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-lab-api"
version = "0.3.0"
description = "Performance Lab API — athlete state modeling and algorithmic training prescription engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Nalakram" }]

dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Config & validation
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    # Auth
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "bcrypt>=4.0.0",
    # HTTP / JSON
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "aiofiles>=23.0.0",
    # Math engine (v0.3 refined model)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # Data / Kaggle dataset access (KGAT token via KAGGLE_API_TOKEN)
    "kagglehub>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "psycopg2-binary>=2.9.0",   # needed for alembic in some environments
    # Offline ML: Q2 recovery-priors training pipeline (app/ml/) + its tests. Not a
    # runtime dependency — the app and shadow service consume only the JSON artifact.
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
]

# Future / optional feature groups (not installed by default)
llm = [
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-generativeai>=0.7.0",
    "mistralai>=0.4.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.4.0",
]

tasks = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "slowapi>=0.1.0",
]

observability = [
    "structlog>=24.4.0",
]

[project.scripts]
# Add CLI entrypoints here when ready (e.g. perflab-migrate, etc.)

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "TID"]
ignore = [
    "E501",   # line length handled by the formatter
    "UP042",  # keep `(str, Enum)` mixins — StrEnum changes str()/SAEnum semantics for enums serialized to the API + DB
]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"app.logic.dose_engine".msg = "Use app.logic.dose_engine_v0 instead — dose_engine is deprecated"
"app.logic.state_update".msg = "Use app.logic.state_update_v0 instead — state_update is deprecated"

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection helpers are idiomatic as argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exported names

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
pythonVersion = "3.12"
include = ["app"]
# Offline ML/training code (pandas-heavy) is not the runtime app and pandas' strict
# types resolve inconsistently across environments (py.typed presence differs); keep
# it out of the strict type gate — ruff + the functional tests cover it.
exclude = ["app/ml"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
# Re-export barrels and SQLAlchemy column defaults are intentional.
reportUnusedImport = "none"
reportDeprecated = "none"
# Dynamic JSON / seed data paths; tighten incrementally after the mypy cutover.
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportUnnecessaryIsInstance = "none"
reportConstantRedefinition = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "requires_db: marks tests as requiring a live PostgreSQL instance",
]
